<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/onboardingFragment">

    <fragment
        android:id="@+id/onboardingFragment"
        android:name="com.bluepixel.mood.ui.onboarding.OnboardingFragment"
        android:label="شروع" />

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.bluepixel.mood.ui.home.HomeFragment"
        android:label="@string/nav_home" />

    <fragment
        android:id="@+id/modesFragment"
        android:name="com.bluepixel.mood.ui.modes.ModesFragment"
        android:label="@string/nav_modes" />

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.bluepixel.mood.ui.history.HistoryFragment"
        android:label="@string/nav_history" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.bluepixel.mood.ui.settings.SettingsFragment"
        android:label="@string/nav_settings" />

    <fragment
        android:id="@+id/modeEditorFragment"
        android:name="com.bluepixel.mood.ui.editor.ModeEditorFragment"
        android:label="ویرایش حالت" />

    <fragment
        android:id="@+id/schedulesFragment"
        android:name="com.bluepixel.mood.ui.schedules.SchedulesFragment"
        android:label="زمان‌بندی‌ها" />

    <fragment
        android:id="@+id/scheduleEditorFragment"
        android:name="com.bluepixel.mood.ui.schedules.ScheduleEditorFragment"
        android:label="ویرایش زمان‌بندی" />

</navigation>
